- Swagger added. - ErrorHandler improved.